# aiagents-multi-model

./: .gitignore  BACKUP_MIGRATION_NOTICE.md  CRITICAL_ISSUES_FOUND.md  Makefile  NEW_PYTHON_FEATURES.md  PROJECT_CONTEXT.md  README.md  SECURE_DEPLOYMENT_PLAN.md  deploy.sh  pyproject.toml  token-extraction-guide.md
dockerfiles/: Dockerfile.base  Dockerfile.claude  Dockerfile.gemini  Dockerfile.grok
docs/: PHASE_4.5_SUMMARY.md  age-setup-guide.md  claude-api-key-setup.md  claude-session-auth.md  deployment-architecture.md  phase1-foundation.md  phase2-containers.md  phase3-authentication.md  phase4-conversations.md
scripts/: agent-bridge.py  claude-api.py  configure-secrets.sh  deploy-cli.py  gemini-api.py  grok-api.py  groq-api.py  huggingface-api.py  safe-update.sh  setup-ai-foundation.sh  setup-phase2.sh  setup-phase3.sh  setup-phase4.5.sh  setup-phase4.sh  test_commit2.py  test_commit3.py  test_project_manager.py
src/ai_agents/: __about__.py  __init__.py  claude_api.py  gemini_api.py  grok_api.py
src/ai_agents/core/: __init__.py  knowledge_extractor.py  project_manager.py
src/ai_agents/deployment/: __init__.py  backup.py  containers.py  exceptions.py  secrets.py  state.py  utils.py
tests/: __init__.py  test_cli_flags.py  test_project_manager.py
tests/deployment/: __init__.py  test_backup.py  test_containers.py  test_secrets.py  test_state.py
